tests/toy/neg/000493_mutation.toylang
program a = { a = else == a; } .
